resources/tests/invalid_syntax/scope.ct
//Error: Unclosed curly bracket delimiter!
//1
fn hello()->i32
{
  10 + 5;
  {
    10 + 10;
  }